# file_transfer

./: .gitmodules  CMakeLists.txt  env.cmake  resources.qrc
protocol/: file_trans.proto
